--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -49,7 +49,6 @@ steps:
 
 
 - task: PowerShell@2
-  name: 'semver'
   displayName: 'Check Tag conforms to SemVer'
   condition: startsWith(variables['build.sourceBranch'], 'refs/tags/') # Only run this step when the trigger event is a tag push
   inputs:
@@ -75,10 +74,8 @@ steps:
       }
 
 - task: DotNetCoreCLI@2
-  name: 'pack'
   displayName: 'Pack'
-  dependsOn: 'semver'
-  condition: startsWith(variables['build.sourceBranch'], 'refs/tags/') # Only run this step when the trigger event is a tag push
+  condition: and(succeeded(), startsWith(variables['build.sourceBranch'], 'refs/tags/')) # Only run this step when the trigger event is a tag push
   inputs:
     command: 'pack'
     packagesToPack: 'src/**/*.csproj'
@@ -87,8 +84,7 @@ steps:
 
 - task: DotNetCoreCLI@2
   displayName: 'Push to GitHub Packages'
-  dependsOn: 'pack'
-  condition: startsWith(variables['build.sourceBranch'], 'refs/tags/') # Only run this step when the trigger event is a tag push
+  condition: and(succeeded(),startsWith(variables['build.sourceBranch'], 'refs/tags/')) # Only run this step when the trigger event is a tag push
   inputs:
     command: 'push'
     packagesToPush: '$(Build.ArtifactStagingDirectory)/*.nupkg'
