--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -75,6 +75,7 @@ steps:
 
 - task: DotNetCoreCLI@2
   displayName: 'Pack'
+  condition: and(succeeded(), startsWith(variables['build.sourceBranch'], 'refs/tags/')) # Only run this step when the trigger event is a tag push
   inputs:
     command: 'pack'
     packagesToPack: 'src/**/*.csproj'
@@ -83,6 +84,7 @@ steps:
 
 - task: DotNetCoreCLI@2
   displayName: 'Push to GitHub Packages'
+  condition: and(succeeded(), startsWith(variables['build.sourceBranch'], 'refs/tags/')) # Only run this step when the trigger event is a tag push
   inputs:
     command: 'push'
     packagesToPush: '$(Build.ArtifactStagingDirectory)/*.nupkg'
