Update azure-pipelines.yml for Azure Pipelines
Updated Nuget repo ref

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -88,5 +88,4 @@ steps:
   inputs:
     command: 'push'
     packagesToPush: '$(Build.ArtifactStagingDirectory)/*.nupkg'
-    nuGetFeedType: 'external'
-    publishFeedCredentials: 'GitHub Packages'
+    nuGetFeedType: 'internal'
